# OpSystem

./: .gitignore
lab1/: CMakeLists.txt  helloworld.cmd  helloworld.sh
lab2/: CMakeLists.txt  background_mode.cpp  background_mode.hpp  main.cpp  program.cpp  wait
lab2 — копия/: background_mode.cpp  background_mode.hpp  main.cpp  wait.cpp
lab3/: CMakeLists.txt  copy1.cpp  copy2.cpp  lab3.code-workspace  main.cpp  processes.hpp  shmem.hpp  util.hpp
lab5/: CMakeLists.txt  main.cpp  server.hpp  sim_log.py
lab6, lab7/: Task6.pro  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
